# kurento-module

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake
assets/: model_pool_config.json  state_table.json
debian/: changelog  control  copyright
include/: ModelPool.hpp  utils.hpp  yolov7.hpp
src/server/: CMakeLists.txt
src/server/implementation/objects/: ObjDetImpl.cpp  ObjDetImpl.hpp  ObjDetOpenCVImpl.cpp  ObjDetOpenCVImpl.hpp
src/server/implementation/objects/yolov7/: ModelPool.cpp  ModelPool.hpp  utils.hpp  yolov7.cpp  yolov7.hpp
src/server/interface/: objdet.ObjDet.kmd.json  objdet.kmd.json
